@@ -1010,6 +1010,7 @@ hplink
 icc
 icl
 ifl
+ifort
 ilink
 ilink32
 jar
