@@ -55,12 +55,16 @@ tools = [
     'BitKeeper',
     'c++',
     'cc',
+    'cvf',
     'CVS',
     'default',
     'dmd',
     'dvipdf',
     'dvips',
     'f77',
+    'f90',
+    'f95',
+    'fortran',
     'g++',
     'g77',
     'gas',
@@ -72,6 +76,7 @@ tools = [
     'hplink',
     'icc',
     'icl',
+    'ifort',
     'ifl',
     'ilink',
     'ilink32',
